TDD: изменил структуру приложения для эфективного парсинга ответов от ГИБДД.

--- a/app/src/main/res/layout-land/activity_auto_result.xml
+++ b/app/src/main/res/layout-land/activity_auto_result.xml
@@ -191,7 +191,8 @@
         </LinearLayout>
     </LinearLayout>
 
-    <fragment android:name="ru.android_studio.gibdd_servis.ItemFragment"
+    <fragment
+        android:name="ru.android_studio.gibdd_servis.ItemFragment"
         android:id="@+id/article_fragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
