--- a/app/src/main/res/anim/exit_to_bottom.xml
+++ b/app/src/main/res/anim/exit_to_bottom.xml
@@ -2,7 +2,9 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:shareInterpolator="false">
     <translate
-        android:fromXDelta="0%" android:toXDelta="0%"
-        android:fromYDelta="0%" android:toYDelta="100%"
-        android:duration="700"/>
+        android:fromXDelta="0%"
+        android:toXDelta="0%"
+        android:fromYDelta="0%"
+        android:toYDelta="100%"
+        android:duration="700" />
 </set>
