--- a/app/src/main/res/layout-land/activity_fine_result.xml
+++ b/app/src/main/res/layout-land/activity_fine_result.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/toolbar"
+    <include
+        layout="@layout/toolbar"
         android:id="@+id/include" />
 
     <ScrollView
