--- a/app/src/main/res/layout-land/menu.xml
+++ b/app/src/main/res/layout-land/menu.xml
@@ -11,8 +11,7 @@
     <View
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_weight="1" >
-    </View>
+        android:layout_weight="1"></View>
 
     <ImageButton
         android:layout_width="60dp"
@@ -26,8 +25,7 @@
     <View
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_weight="1" >
-    </View>
+        android:layout_weight="1"></View>
 
     <ImageButton
         android:layout_width="60dp"
@@ -41,8 +39,7 @@
     <View
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_weight="1" >
-    </View>
+        android:layout_weight="1"></View>
 
     <ImageButton
         android:layout_width="60dp"
@@ -56,8 +53,7 @@
     <View
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_weight="1" >
-    </View>
+        android:layout_weight="1"></View>
 
     <ImageButton
         android:layout_width="60dp"
@@ -71,7 +67,6 @@
     <View
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_weight="1" >
-    </View>
+        android:layout_weight="1"></View>
 
 </LinearLayout>
