--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,42 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:gravity="center"
-        android:layout_gravity="center">
-
-        <LinearLayout
-            android:id="@+id/firstLineLinearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:gravity="center"
-            android:layout_weight="1"
-            android:layout_gravity="center">
-
-            <Button
-                android:id="@+id/menu_driver_btn"
-                android:layout_width="250px"
-                android:layout_height="250px"
-                android:textSize="13sp"
-                android:background="@drawable/driver"
-                android:layout_marginTop="50dp"
-                android:layout_marginBottom="50dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="25dp"
-                android:layout_gravity="center" />
-
-            <Button
-                android:id="@+id/menu_car_btn"
-                android:layout_width="250px"
-                android:layout_height="250px"
-                android:textSize="13sp"
-                android:background="@drawable/car"
-                android:layout_marginTop="50dp"
-                android:layout_marginBottom="50dp"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="10dp"
-                android:layout_gravity="center" />
-        </LinearLayout>
+        android:padding="15dp">
 
         <!--<LinearLayout
             android:id="@+id/secondLineLinearLayout"
@@ -87,5 +52,62 @@
                 android:layout_marginRight="10dp"
                 android:layout_gravity="center" />
         </LinearLayout>-->
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Проверка водителя"
+            android:id="@+id/menu_driver_btn"
+            android:paddingBottom="15dp"
+            android:textSize="16dp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Проверка автомобиля"
+            android:textSize="16dp" />
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Проверка истории регистрации в ГИБДД"
+                android:id="@+id/menu_car_history_btn"
+                android:paddingLeft="15dp"
+                android:paddingTop="5dp"
+                android:textSize="16dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Проверка нахождения в розыске"
+                android:id="@+id/menu_car_wanted_btn"
+                android:paddingLeft="15dp"
+                android:paddingTop="5dp"
+                android:textSize="16dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Проверка наличия ограничений"
+                android:id="@+id/menu_car_restrict_btn"
+                android:paddingLeft="15dp"
+                android:paddingTop="5dp"
+                android:textSize="16dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Проверка на участие в ДТП"
+                android:id="@+id/menu_car_dtp_btn"
+                android:paddingLeft="15dp"
+                android:paddingTop="5dp"
+                android:textSize="16dp" />
+        </LinearLayout>
+
     </LinearLayout>
 </LinearLayout>
